src/objects/Intake__c.object
<CustomObject>
    <description>Holds data from client intake and assessment interviews</description>
    <fields>
        <fullName>C501_Basic_Needs__c</fullName>
        <description>Homeward House: &quot;Do you struggle financially to make ends meet?&quot;; Making Life Work: &quot;Do you need assistance with your basic needs, food, clothing, furniture etc.?&quot;</description>
        <inlineHelpText>HH: &quot;Do you struggle financially to make ends meet?&quot;; MLW: &quot;Do you need assistance with your basic needs, food, clothing, furniture etc.?&quot;</inlineHelpText>
        <label>Basic Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Family__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>lookup to HH Account record - not a M/D so that it can be reported on somewhat anonymously w/o access to the family&apos;s identifiable info</description>
        <label>Family</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Intake form must be linked to a Household account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household Account</value>
            </filterItems>
            <infoMessage>Connect this intake form to the family&apos;s Household record</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intakes</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Housing__c</fullName>
        <description>Homeward House: &quot;Do you need referrals to housing resources?&quot;; North Counties&apos; Community: &quot;I would like information and/or help with Rent&quot;</description>
        <inlineHelpText>HH: &quot;Do you need referrals to housing resources?&quot;; NCC: &quot;I would like information and/or help with Rent&quot;</inlineHelpText>
        <label>Housing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Y_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Transport__c</fullName>
        <description>Homeward House: &quot;Do you need referrals to transportation resources?&quot;; North Counties&apos; Community: &quot;I would like information and/or help with Transportation&quot;</description>
        <inlineHelpText>HH: &quot;Do you need referrals to transportation resources?&quot;; NCC: &quot;I would like information and/or help with Transportation&quot;</inlineHelpText>
        <label>Transport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Y_N</valueSetName>
        </valueSet>
    </fields>
    <label>Intake</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{00000}</displayFormat>
        <label>Intake Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>